--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@wekanteam/meteor-node-stubs",
+  "name": "meteor-node-stubs",
   "author": "Ben Newman <ben@meteor.com>",
   "description": "Stub implementations of Node built-in modules, a la Browserify",
-  "version": "1.2.12",
+  "version": "1.2.7",
   "main": "index.js",
   "license": "MIT",
   "homepage": "https://github.com/wekan/meteor-node-stubs/README.md",
@@ -11,12 +11,12 @@
     "prepare": "node scripts/build-deps.js"
   },
   "dependencies": {
-    "@meteorjs/crypto-browserify": "^3.12.1",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^5.7.1",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "domain-browser": "^4.23.0",
     "elliptic": "^6.6.0",
     "events": "^3.3.0",
@@ -32,17 +32,17 @@
     "string_decoder": "^1.3.0",
     "timers-browserify": "^2.0.12",
     "tty-browserify": "0.0.1",
-    "url": "^0.11.4",
+    "url": "^0.11.3",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
   },
   "bundledDependencies": [
-    "@meteorjs/crypto-browserify",
     "assert",
     "browserify-zlib",
     "buffer",
     "console-browserify",
     "constants-browserify",
+    "crypto-browserify",
     "domain-browser",
     "events",
     "https-browserify",
@@ -62,7 +62,7 @@
     "vm-browserify"
   ],
   "devDependencies": {
-    "rimraf": "^5.0.10"
+    "rimraf": "^2.7.1"
   },
   "repository": {
     "type": "git",
