--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "timers-browserify": "^2.0.12",
+    "to-buffer": "^1.2.1",
     "tty-browserify": "0.0.1",
     "url": "^0.11.3",
     "util": "^0.12.5",
